--- a/packages/core/src/scss/_legacy/global/_background-patterns.scss
+++ b/packages/core/src/scss/_legacy/global/_background-patterns.scss
@@ -2,31 +2,31 @@
 
 .pattern {
   &--noise {
-    background-image: url("../images/pattern-noise.png");
+    background-image: url("#{$uq-bg-image-path}/pattern-noise.png");
     background-repeat: repeat;
   }
 
   &--black-pinstripe {
-    background: #161616 url("../images/pattern-black-pinstripe.gif") repeat 0 0;
+    background: #161616 url("#{$uq-bg-image-path}/pattern-black-pinstripe.gif") repeat 0 0;
   }
 
   &--cardboard {
-    background: #f6f6f6 url("../images/pattern-cardboard.jpg") repeat 0 0;
+    background: #f6f6f6 url("#{$uq-bg-image-path}/pattern-cardboard.jpg") repeat 0 0;
   }
 
   &--mesh {
-    background: #fafafa url("../images/pattern-mesh.gif") repeat 0 0;
+    background: #fafafa url("#{$uq-bg-image-path}/pattern-mesh.gif") repeat 0 0;
   }
 
   &--dark-grid {
-    background: #1d1d1d url("../images/pattern-dark-grid.png") repeat 50% 50%;
+    background: #1d1d1d url("#{$uq-bg-image-path}/pattern-dark-grid.png") repeat 50% 50%;
   }
 
   &--thatched {
-    background: #f8f8f8 url("../images/pattern-thatched.png") repeat 0 0;
+    background: #f8f8f8 url("#{$uq-bg-image-path}/pattern-thatched.png") repeat 0 0;
   }
 
   &--light-grid {
-    background: #e2e2e2 url("../images/pattern-light-grid.png") repeat 50% 50%;
+    background: #e2e2e2 url("#{$uq-bg-image-path}/pattern-light-grid.png") repeat 50% 50%;
   }
 }
