--- a/packages/core/src/scss/_component.scss
+++ b/packages/core/src/scss/_component.scss
@@ -3,7 +3,7 @@
 @import '_global.scss';
 @import '_print.scss';
 
-// Legacy: Import Sass mixins, variables, Compass modules, etc.
+// Legacy: Import Sass mixins, variables, Compass modules, etc. (TODO: see file contents)
 @import '_legacy/init';
 
 // Legacy: Base (TODO: add to @uq-uidf/body package)
