--- a/packages/storybook-html/src/components/core/colours.html
+++ b/packages/storybook-html/src/components/core/colours.html
@@ -1,5 +1,71 @@
-<div class="row">
-  <div class="small-6 medium-3 large-2 column">
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--uq-purple"></div>
-  </div>
-</div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--uq-dark-purple"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--uq-green"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--uq-gold"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--link-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--link-active-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--external-link-icon-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--linked-list-desc"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--vertical-list-border"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--secondary-button-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--secondary-button-bg-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--secondary-button-bg-hover"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-status-border-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-warning-border-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-error-border-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-completed"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--form-required-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--accordion-editor-outline"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--content-column-block-pane-bg"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--content-column-block-pane-odd-bg"></div>
+  </li>
+</ul>
+<!-- </div> -->
