--- a/packages/storybook-html/src/components/core/style.scss
+++ b/packages/storybook-html/src/components/core/style.scss
@@ -5,11 +5,26 @@ $uq-bg-image-path: "~@uq-uidf/core/src/images";
 
 @import "~@uq-uidf/core/src/scss/_component";
 
+.color-swatch-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  list-style: none;
+  margin: 30px;
+  padding: 0;
+  &__item {
+    flex-basis: #{(100 / 2) + "%"};
+    @media #{$medium-up} {
+      flex-basis: #{(100 / 6) + "%"};
+    }
+    @media #{$large-up} {
+      flex-basis: #{(100 / 8) + "%"};
+    }
+  }
+}
 .color-swatch {
   padding: 50%; // square ratio
   width: 100%;
-  border-radius: 50%;
-  margin: $column-gutter / 2;
   position: relative;
   &:after {
     position: absolute;
@@ -17,14 +32,134 @@ $uq-bg-image-path: "~@uq-uidf/core/src/images";
     left: 0;
     transform: translateY(-50%);
     display: block;
+    padding: 20px;
+    line-height: 1.3;
     width: 100%;
     text-align: center;
+    font-size: 0.75rem;
     color: white;
   }
   &--uq-purple {
     background-color: $uq-purple;
     &:after {
       content: '$uq-purple';
+    }
+  }
+  &--uq-dark-purple {
+    background-color: $uq-dark-purple;
+    &:after {
+      content: '$uq-dark-purple';
+    }
+  }
+  &--uq-green {
+    background-color: $uq-green;
+    &:after {
+      content: '$uq-green';
+    }
+  }
+  &--uq-gold {
+    background-color: $uq-gold;
+    &:after {
+      content: '$uq-gold';
+    }
+  }
+  &--link-color {
+    background-color: $link-color;
+    &:after {
+      content: '$link-color';
+    }
+  }
+  &--link-active-color {
+    background-color: $link-active-color;
+    &:after {
+      content: '$link-active-color';
+    }
+  }
+  &--external-link-icon-color {
+    background-color: $external-link-icon-color;
+    &:after {
+      content: '$external-link-icon-color';
+    }
+  }
+  &--linked-list-desc {
+    background-color: $linked-list-desc;
+    &:after {
+      content: '$linked-list-desc';
+    }
+  }
+  &--vertical-list-border {
+    background-color: $vertical-list-border;
+    &:after {
+      color: black;
+      content: '$vertical-list-border';
+    }
+  }
+  &--secondary-button-color {
+    background-color: $secondary-button-color;
+    &:after {
+      color: black;
+      content: '$secondary-button-color';
+    }
+  }
+  &--secondary-button-bg-color {
+    background-color: $secondary-button-bg-color;
+    &:after {
+      content: '$secondary-button-bg-color';
+    }
+  }
+  &--secondary-button-bg-hover {
+    background-color: $secondary-button-bg-hover;
+    &:after {
+      content: '$secondary-button-bg-hover';
+    }
+  }
+  &--messages-status-border-color {
+    background-color: $messages-status-border-color;
+    &:after {
+      content: '$messages-status-border-color';
+    }
+  }
+  &--messages-warning-border-color {
+    background-color: $messages-warning-border-color;
+    &:after {
+      color: black;
+      content: '$messages-warning-border-color';
+    }
+  }
+  &--messages-error-border-color {
+    background-color: $messages-error-border-color;
+    &:after {
+      content: '$messages-error-border-color';
+    }
+  }
+  &--progression-completed {
+    background-color: $progression-completed;
+    &:after {
+      content: '$progression-completed';
+    }
+  }
+  &--form-required-color {
+    background-color: $form-required-color;
+    &:after {
+      content: '$form-required-color';
+    }
+  }
+  &--accordion-editor-outline {
+    background-color: $accordion-editor-outline;
+    &:after {
+      content: '$accordion-editor-outline';
+    }
+  }
+  &--content-column-block-pane-bg {
+    background-color: $content-column-block-pane-bg;
+    &:after {
+      content: '$content-column-block-pane-bg';
+    }
+  }
+  &--content-column-block-pane-odd-bg {
+    background-color: $content-column-block-pane-odd-bg;
+    &:after {
+      content: '$content-column-block-pane-odd-bg';
     }
   }
 }
