--- a/packages/storybook-html/src/components/core/colours.html
+++ b/packages/storybook-html/src/components/core/colours.html
@@ -33,6 +33,12 @@
 </ul>
 <ul class="color-swatch-list">
   <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--button-bg-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--button-bg-hover"></div>
+  </li>
+  <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--secondary-button-color"></div>
   </li>
   <li class="color-swatch-list__item">
@@ -44,20 +50,68 @@
 </ul>
 <ul class="color-swatch-list">
   <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-status-bg"></div>
+  </li>
+  <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--messages-status-border-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-status-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-warning-bg"></div>
   </li>
   <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--messages-warning-border-color"></div>
   </li>
   <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-warning-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-error-bg"></div>
+  </li>
+  <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--messages-error-border-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-error-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--messages-error-link-color"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-text"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-border"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-label"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-step-bg"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--progression-bar-bg"></div>
   </li>
   <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--progression-completed"></div>
   </li>
+</ul>
+<ul class="color-swatch-list">
   <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--form-required-color"></div>
   </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--form-description-color"></div>
+  </li>
+  <li class="color-swatch-list__item">
+    <div class="color-swatch color-swatch--form-input-border-color"></div>
+  </li>
+</ul>
+<ul class="color-swatch-list">
   <li class="color-swatch-list__item">
     <div class="color-swatch color-swatch--accordion-editor-outline"></div>
   </li>
