--- a/packages/storybook-html/src/components/core/_icons.scss
+++ b/packages/storybook-html/src/components/core/_icons.scss
@@ -6,12 +6,12 @@
   margin: 30px;
   padding: 0;
   &__item {
-    flex-basis: #{(100 / 2) + "%"};
+    flex-basis: #{(100 / 4) + "%"};
     @media #{$medium-up} {
-      flex-basis: #{(100 / 6) + "%"};
+      flex-basis: #{(100 / 8) + "%"};
     }
     @media #{$large-up} {
-      flex-basis: #{(100 / 8) + "%"};
+      flex-basis: #{(100 / 12) + "%"};
     }
   }
 }
@@ -19,8 +19,7 @@
   padding: 50%; // square ratio
   width: 100%;
   position: relative;
-  /*
-  &:after {
+  .icon {
     position: absolute;
     top: 50%;
     left: 0;
@@ -30,7 +29,6 @@
     line-height: 1.3;
     width: 100%;
     text-align: center;
-    font-size: 0.75rem;
+    font-size: 2rem;
   }
-  */
 }
