--- a/packages/storybook-html/src/components/core/icons.html
+++ b/packages/storybook-html/src/components/core/icons.html
@@ -9,4 +9,24 @@
       <span class="icon icon-info-circle"></span>
     </div>
   </li>
+  <li class="story-icons-list__item">
+    <div class="story-icon">
+      <span class="icon icon-uq-ferry"></span>
+    </div>
+  </li>
+  <li class="story-icons-list__item">
+    <div class="story-icon">
+      <span class="icon icon-info-circle"></span>
+    </div>
+  </li>
+  <li class="story-icons-list__item">
+    <div class="story-icon">
+      <span class="icon icon-uq-ferry"></span>
+    </div>
+  </li>
+  <li class="story-icons-list__item">
+    <div class="story-icon">
+      <span class="icon icon-info-circle"></span>
+    </div>
+  </li>
 </ul>
