--- a/packages/storybook-html/src/components/core/icons.html
+++ b/packages/storybook-html/src/components/core/icons.html
@@ -11,22 +11,22 @@
   </li>
   <li class="story-icons-list__item">
     <div class="story-icon">
-      <span class="icon icon-uq-ferry"></span>
+      <span class="icon icon-instagram"></span>
     </div>
   </li>
   <li class="story-icons-list__item">
     <div class="story-icon">
-      <span class="icon icon-info-circle"></span>
+      <span class="icon icon-facebook"></span>
     </div>
   </li>
   <li class="story-icons-list__item">
     <div class="story-icon">
-      <span class="icon icon-uq-ferry"></span>
+      <span class="icon icon-uq-android"></span>
     </div>
   </li>
   <li class="story-icons-list__item">
     <div class="story-icon">
-      <span class="icon icon-info-circle"></span>
+      <span class="icon icon-uq-australia"></span>
     </div>
   </li>
 </ul>
