--- a/packages/form/src/scss/_global.scss
+++ b/packages/form/src/scss/_global.scss
@@ -1,2 +1,3 @@
-// Documentation (re: dependencies, version), variables, and mixins go here... for each component
+// Variables, functions, and mixins
 
+@import '../../node_modules/foundation-sites/scss/foundation/components/forms';
