--- a/packages/storybook-html/src/components/core/colours.html
+++ b/packages/storybook-html/src/components/core/colours.html
@@ -1,125 +1,132 @@
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--uq-purple"></div>
+<h1 class="story-section-heading">Named brand colours</h1>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--uq-purple"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--uq-dark-purple"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--uq-black"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--uq-green"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--uq-white"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--uq-gold"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--uq-green"></div>
   </li>
-</ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--link-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--link-active-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--external-link-icon-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--linked-list-desc"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--uq-gold"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--vertical-list-border"></div>
+<h1 class="story-section-heading">Component/element palettes</h1>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--link-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--link-active-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--external-link-icon-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--linked-list-desc"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--button-bg-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--button-bg-hover"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--secondary-button-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--secondary-button-bg-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--secondary-button-bg-hover"></div>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--vertical-list-border"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-status-bg"></div>
+<!--
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--button-bg-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-status-border-color"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--button-bg-hover"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-status-color"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--secondary-button-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-warning-bg"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--secondary-button-bg-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-warning-border-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-warning-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-error-bg"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-error-border-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-error-color"></div>
-  </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--messages-error-link-color"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--secondary-button-bg-hover"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-text"></div>
+-->
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-status-bg"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-border"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-status-border-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-label"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-status-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-step-bg"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-warning-bg"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-bar-bg"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-warning-border-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--progression-completed"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-warning-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-error-bg"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-error-border-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-error-color"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--messages-error-link-color"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--form-required-color"></div>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-text"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--form-description-color"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-border"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--form-input-border-color"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-label"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-step-bg"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-bar-bg"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--progression-completed"></div>
   </li>
 </ul>
-<ul class="color-swatch-list">
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--accordion-editor-outline"></div>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--form-required-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--content-column-block-pane-bg"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--form-description-color"></div>
   </li>
-  <li class="color-swatch-list__item">
-    <div class="color-swatch color-swatch--content-column-block-pane-odd-bg"></div>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--form-input-border-color"></div>
+  </li>
+</ul>
+<ul class="story-color-swatch-list">
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--accordion-editor-outline"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--content-column-block-pane-bg"></div>
+  </li>
+  <li class="story-color-swatch-list__item">
+    <div class="story-color-swatch story-color-swatch--content-column-block-pane-odd-bg"></div>
   </li>
 </ul>
 <!-- </div> -->
