--- a/packages/storybook-html/src/components/core/style.scss
+++ b/packages/storybook-html/src/components/core/style.scss
@@ -1,4 +1,9 @@
 @import "~@uq-uidf/core/src/scss/_component";
+@import "~@uq-uidf/body/src/scss/_component";
 
 @import "colours";
 @import "icons";
+
+.story-section-heading {
+  margin: 30px;
+}
