Blockquote-TG implimentation v1.0

--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -4,6 +4,7 @@
 
 // Primary font stack
 $roboto:  'Roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
+$merriweather:  'Merriweather', serif;
 
 // Monospace font stacks
 // For an explanation of why "sans-serif" is at the end of this list, see
